Python/hashtable(linear proibing)

--- a/Algorithm/Python/lecture/Chapter09-해쉬 테이블-live.ipynb
+++ b/Algorithm/Python/lecture/Chapter09-해쉬 테이블-live.ipynb
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,34 +526,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n",
-      "4\n",
-      "4\n"
+      "5\n",
+      "1\n",
+      "5\n"
      ]
     }
    ],
    "source": [
-    "print (hash('dk') % 8)\n",
+    "print (hash('dp') % 8)\n",
     "print (hash('da') % 8)\n",
     "print (hash('dc') % 8)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_data('dk', '01200123123')\n",
-    "save_data('da', '3333333333')\n",
-    "read_data('dc')"
+    "save_data('dp', '01200123123')\n",
+    "save_data('dc', '3333333333')\n",
+    "save_data('da', '112233112233')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0,\n",
+       " [6192605901509648361, '112233112233'],\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " [-8862420946146235699, '01200123123'],\n",
+       " [3187739233935905517, '3333333333'],\n",
+       " 0]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hash_table"
    ]
   },
   {
@@ -594,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -707,16 +734,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "6\n",
       "1\n",
-      "2\n",
-      "2\n"
+      "7\n"
      ]
     }
    ],
