--- a/Algorithm/Python/project/6.해쉬테이블.ipynb
+++ b/Algorithm/Python/project/6.해쉬테이블.ipynb
@@ -177,11 +177,136 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "리니어 알고리즘\n",
+    "- hash_func에 key 값을 넣을때 중복되는 값이 있다면 다음 0(값이 없는 상태)를 찾아 [hash value, value] 형태로 값을 저장한다.\n",
+    "- key를 읽을떄도 hash_func로 나온 hash_address로 값을 찾고 해당 key값이 찾고자 하는 index_key와 동일하면 value return, 그렇지 않으면 해당 주소부터 아래로 순회하며 index를 비교하여 값을 찾는다.\n",
+    "- 값이 없으면 None을 return"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "hash_table = list([0 for i in range(8)])\n",
+    "\n",
+    "def get_key(data):\n",
+    "    return hash(data)\n",
+    "\n",
+    "def hash_function(key):\n",
+    "    return key % 8\n",
+    "\n",
+    "def save_data(data, value):\n",
+    "    index_key = get_key(data)\n",
+    "    hash_address = hash_function(index_key)\n",
+    "    if hash_table[hash_address] != 0:\n",
+    "        for index in range(hash_address, len(hash_table)):\n",
+    "            if hash_table[index] == 0:\n",
+    "                hash_table[index] = [index_key, value]\n",
+    "                return\n",
+    "            elif hash_table[index][0] == index_key:\n",
+    "                hash_table[index][1] = value\n",
+    "                return\n",
+    "    else:\n",
+    "        hash_table[hash_address] = [index_key, value]\n",
+    "\n",
+    "def read_data(data):\n",
+    "    index_key = get_key(data)\n",
+    "    hash_address = hash_function(index_key)\n",
+    "\n",
+    "    if hash_table[hash_address] != 0:\n",
+    "        for index in range(hash_address, len(hash_table)):\n",
+    "            if hash_table[index] == 0:\n",
+    "                return None\n",
+    "            elif hash_table[index][0] == index_key:\n",
+    "                return hash_table[index][1]\n",
+    "    else:\n",
+    "        return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "5\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (hash('dp') % 8)\n",
+    "print (hash('da') % 8)\n",
+    "print (hash('dc') % 8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_data('dp', '01200123123')\n",
+    "save_data('dc', '3333333333')\n",
+    "save_data('da', '112233112233')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'01200123123'"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "read_data('dp')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0,\n",
+       " 0,\n",
+       " [-5962403326429366678, '01200123123'],\n",
+       " [4301874464681063506, '3333333333'],\n",
+       " 0,\n",
+       " [-5150368996969268195, '112233112233'],\n",
+       " 0,\n",
+       " 0]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hash_table"
+   ]
   }
  ],
  "metadata": {
