--- a/Algorithm/Python/practice/youtube/greedy/1.greedy.ipynb
+++ b/Algorithm/Python/practice/youtube/greedy/1.greedy.ipynb
@@ -31,6 +31,64 @@
     "N = input()\n",
     "print(type(N))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "소수를 구하라\n",
+    "\n",
+    "1. 제곱근의 수를 사용하여 구한다.\n",
+    "  - 제곱근을 기준으로 순차적으로 처음수와 끝수의 합을 이뤄주는 수가 1과 자기 자신말고 다른수가 존재시 소수가 될수 없다.\n",
+    "  \n",
+    "\n",
+    "```python\n",
+    "for i range(2, int(math.sqrt(n)) + 1) :\n",
+    "```\n",
+    "\n",
+    "2. 에라토스테네스의 체를 이용하여 구한다.\n",
+    "  - 지정된 범위 내에서 2로 나누어 떨어지는 수, 3으로 나누어 떨어지는 수... 등등 n으로 나누어 떨어지는 수를 차례로 제외시킨다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "피보나치 수열의 n번쨰 수를 구하라\n",
+    "\n",
+    "1. 재귀함수를 이용하여 구한다.\n",
+    "2. 메모이제이션 방식으로 구한다.\n",
+    "  - 먼저 구해진 수열의 값을 딕셔너리에 저장하여 바로 찾아온다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def toto(n) :\n",
+    "  # 종료 조건으로 모두 1을 반환하도록 설정해 놓는다.\n",
+    "  if (n == 1) or (n == 2):\n",
+    "    return 1\n",
+    "  \n",
+    "  return toto(n - 2) + toto(n - 1)\n",
+    "\n",
+    "toto(6)\n",
+    "\n",
+    "# toto(4)\n"
+   ]
   }
  ],
  "metadata": {
