--- a/Algorithm/Python/practice/youtube/2.DFS,BFS/2.BFS.ipynb
+++ b/Algorithm/Python/practice/youtube/2.DFS,BFS/2.BFS.ipynb
@@ -15,9 +15,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 8 7 4 5 6 "
+     ]
+    }
+   ],
    "source": [
     "# 각 노드가 연결된 정보를 표현 (2차원 리스트) - 처음 시작하는 노드는 비워준단다.\n",
     "graph = [\n",
@@ -46,13 +54,29 @@
     "        for i in graph[v]:        # start로 시작한 인덱스번쨰의 자식노드들을 가져와 for문을 돌려준다.\n",
     "            if not visited[i]:    # 방문한 노드가 아니라면 (visited가 False라면)\n",
     "              queue.append(i)     # 자식노드 정보를 Queue에 담아준 후\n",
-    "              visited[i] = True   # 방문한 노드라고 정의해준다.\n"
+    "              visited[i] = True   # 방문한 노드라고 정의해준다.\n",
+    "\n",
+    "bfs(graph, 1, visited)"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
