--- a/Algorithm/Python/practice/youtube/4.binarySearch/binarySeach.ipynb
+++ b/Algorithm/Python/practice/youtube/4.binarySearch/binarySeach.ipynb
@@ -4,13 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 이진탐색\n",
+    "#### 이진탐색\n",
     "\n",
-    "이진탐색이란 target 값을 오름차순으로 정렬된 리스트에서 중간점(중간 인덱스)의 값과 비교하여 작으면 왼쪽구간으로 크면 오른쪽구간으로 변경하여 지속적으로 검색을 진행하는 방식이다.\n",
-    "\n",
-    "이진탐색은 정렬이 된 리스트 or 배열을 사용해야 한다는 것에 주의하자\n",
-    "\n",
-    "결과는 target의 위치인 index 값을 반환시킨다."
+    "이진탐색이란 target 값을 오름차순으로 정렬된 리스트에서 중간점(중간 인덱스)의 값과 비교하여 작으면 왼쪽구간으로 크면 오른쪽구간으로 변경하여 지속적으로 검색을 진행하는 방식이다.<br>\n",
+    "이진탐색은 정렬이 된 리스트 or 배열을 사용해야 한다는 것에 주의하자<br>\n",
+    "결과는 target의 위치인 index 값을 반환시킨다.<br>\n",
+    "이진탐색은 재귀를 이용한 이진탐색과 반복을 이용한 이진탐색이 있다.<br>"
    ]
   },
   {
