--- a/Algorithm/Python/practice/practice.ipynb
+++ b/Algorithm/Python/practice/practice.ipynb
@@ -1,48 +1,63 @@
 {
  "cells": [
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "거스름돈 반환하기"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5000\n",
-      "5000  원  1.0  개\n",
-      "1000  원  5.0  개\n",
-      "500  원  10.0  개\n",
-      "100  원  50.0  개\n",
-      "10  원  500.0  개\n",
-      "1  원  5000.0  개\n"
+      "pivot 0\n",
+      "left 1\n",
+      "right 9\n",
+      "pivot 0\n",
+      "left 5\n",
+      "right 4\n",
+      "[1, 2, 3, 4, 5, 9, 8, 6, 7, 10]\n"
      ]
     }
    ],
    "source": [
-    "insert_price = '20000'\n",
-    "product_price = '15000'\n",
-    "change = int(insert_price) - int(product_price)\n",
-    "print(change)\n",
+    "# quick_sort\n",
+    "# 피벗을 정해 왼쪽, 오른쪽에서 오는 값을 확인하여 교환\n",
+    "# 왼쪽, 오른쪽으로 오는 인덱스가 교차시 피벗을 왼쪽 인덱스의 오른쪽 자리에 위치시킨다.\n",
     "\n",
-    "currency_list  = [5000, 1000, 500, 100, 10, 1]\n",
-    "rest = 0\n",
-    "for i in currency_list :\n",
-    "    count = change / i\n",
-    "    \n",
-    "    if (count != 0) :\n",
-    "        print(i, \" 원 \", count, \" 개\" )\n",
-    "        rest = change - (i * count)\n",
-    "    else :\n",
-    "        rest = change"
+    "\n",
+    "\n",
+    "# start와 end는 인덱스값이 들어간다.\n",
+    "\n",
+    "def quick_sort(array, start, end):\n",
+    "  pivot = start\n",
+    "  left = start + 1\n",
+    "  right = end\n",
+    "\n",
+    "  print(\"pivot\", pivot)\n",
+    "  print(\"left\", left)\n",
+    "  print(\"right\", right)\n",
+    "  \n",
+    "  while (left <= right):\n",
+    "    while (left < end and array[pivot] >= array[left]):\n",
+    "      left += 1\n",
+    "    while (right > start and array[pivot] <= array[right]):\n",
+    "      right -= 1\n",
+    "    if (left > right):\n",
+    "      array[pivot], array[right] = array[right], array[pivot]\n",
+    "    else:\n",
+    "      array[left], array[right] = array[right], array[left]\n",
+    "\n",
+    "  print(\"pivot\", pivot)\n",
+    "  print(\"left\", left)\n",
+    "  print(\"right\", right)         # 교차는 무조건 된다\n",
+    "  # quick_sort(array, start, left - 1)\n",
+    "  # quick_sort(array, )\n",
+    "\n",
+    "array = [5, 7, 6, 8, 1, 9, 4, 3, 2, 10]\n",
+    "\n",
+    "quick_sort(array, 0, len(array) - 1)\n",
+    "\n",
+    "print(array)"
    ]
   }
  ],
@@ -62,7 +77,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.9.2"
   },
   "orig_nbformat": 4
  },
