--- a/Algorithm/Python/lecture/youtube/4.binarySearch/binarySeach.ipynb
+++ b/Algorithm/Python/lecture/youtube/4.binarySearch/binarySeach.ipynb
@@ -6,10 +6,10 @@
    "source": [
     "#### 이진탐색\n",
     "\n",
-    "이진탐색이란 target 값을 오름차순으로 정렬된 리스트에서 중간점(중간 인덱스)의 값과 비교하여 작으면 왼쪽구간으로 크면 오른쪽구간으로 변경하여 지속적으로 검색을 진행하는 방식이다.<br>\n",
-    "이진탐색은 정렬이 된 리스트 or 배열을 사용해야 한다는 것에 주의하자<br>\n",
-    "결과는 target의 위치인 index 값을 반환시킨다.<br>\n",
-    "이진탐색은 재귀를 이용한 이진탐색과 반복을 이용한 이진탐색이 있다.<br>"
+    "- 이진탐색이란 target 값을 오름차순으로 정렬된 리스트에서 중간점(중간 인덱스)의 값과 비교하여 작으면 왼쪽구간으로 크면 오른쪽구간으로 변경하여 지속적으로 검색을 진행하는 방식이다.<br>\n",
+    "- 이진탐색은 정렬이 된 리스트 or 배열을 사용해야 한다는 것에 주의하자<br>\n",
+    "- 결과는 target의 위치인 index 값을 반환시킨다.<br>\n",
+    "- 이진탐색은 재귀를 이용한 이진탐색과 반복을 이용한 이진탐색이 있다.<br>"
    ]
   },
   {
@@ -43,7 +43,7 @@
     "n, target = list(map(int, input().split()))\n",
     "array = list(map(int, input().split()))\n",
     "\n",
-    "# array = [8, 3, 2, 10, 14, 12, 10, 7, 1, 5, 6, 4, 9, 11, 15]\n",
+    "# 1 3 5 7 9 11 13 15 17 19\n",
     "# 8 3 2 10 14 12 10 7 1 5 6 4 9 11 15\n",
     "print(n, target, array)\n",
     "\n",
@@ -93,6 +93,15 @@
     "  print(\"target의 데이터가 없음\");\n",
     "else:\n",
     "  print(result + 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "이진탐색의 시간복잡도\n",
+    "- 단계마다 탐색 범위를 2로 나누는 것과 동일하므로 연산 횟수는 log<sub>2</sub>N 에 비례한다.\n",
+    "- 이진탐색은 탐색 범위를 절반씩 줄이며, 시간 복잡도는 `O(logN)`을 보장한다."
    ]
   }
  ],
