--- a/Algorithm/Python/lecture/youtube/2.DFS,BFS/practice2.ipynb
+++ b/Algorithm/Python/lecture/youtube/2.DFS,BFS/practice2.ipynb
@@ -42,21 +42,21 @@
     "n, m = map(int, input().split())\n",
     "\n",
     "graph = []\n",
-    "for i in range(n):\n",
+    "for i in range(n):  # 세로만큼 가로에 들어갈 수를 넣어준다.\n",
     "    graph.append(list(map(int, input())))\n",
     "\n",
     "\n",
     "# 상하좌우를 방문하여 값이 0이면 1로변경시키는 작업을 1의 값을 만나는 순간까지 계속 진행시킨다.\n",
     "# 상하좌우로 전의되면서 \n",
     "def dfs(x, y):\n",
-    "    if x <= -1 or x >=n or y <= -1 or y >= m:\n",
+    "    if x <= -1 or x >=n or y <= -1 or y >= m:   # x와 n을 비교한다 x는 세로다\n",
     "        return False\n",
     "    if graph[x][y] == 0:\n",
     "        graph[x][y] = 1\n",
-    "        dfs(x - 1, y)   # 왼쪽  \n",
-    "        dfs(x, y - 1)   # 아래\n",
-    "        dfs(x + 1, y)   # 오른쪽\n",
-    "        dfs(x, y + 1)   # 위\n",
+    "        dfs(x - 1, y)   # 위  \n",
+    "        dfs(x, y - 1)   # 왼쪽\n",
+    "        dfs(x + 1, y)   # 아래\n",
+    "        dfs(x, y + 1)   # 오른쪽\n",
     "        return True     # 방문 했다면 True를 반환하게하여 count를 증가시킨다.\n",
     "    return False\n",
     "\n",
