--- a/Algorithm/Python/practice/DFS-BFS/DFS.ipynb
+++ b/Algorithm/Python/practice/DFS-BFS/DFS.ipynb
@@ -142,21 +142,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "not enough values to unpack (expected 3, got 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 5\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m# 노드 N, 간선 M, 출발지 R\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[39m# 오름차순으로 노드의 순서를 표시하라\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \n\u001b[0;32m      4\u001b[0m \u001b[39m# 변수 입력받기\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m n, m, r \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(\u001b[39mmap\u001b[39m(\u001b[39mint\u001b[39m, \u001b[39minput\u001b[39m()\u001b[39m.\u001b[39msplit()))\n\u001b[0;32m      8\u001b[0m \u001b[39m# graph = [\u001b[39;00m\n\u001b[0;32m      9\u001b[0m \u001b[39m#   [],\u001b[39;00m\n\u001b[0;32m     10\u001b[0m \u001b[39m#   [2, 3, 8],\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[39m#   [1, 7]\u001b[39;00m\n\u001b[0;32m     18\u001b[0m \u001b[39m# ]\u001b[39;00m\n\u001b[0;32m     20\u001b[0m graph \u001b[39m=\u001b[39m []\n",
-      "\u001b[1;31mValueError\u001b[0m: not enough values to unpack (expected 3, got 1)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 노드 N, 간선 M, 출발지 R\n",
     "# 오름차순으로 노드의 순서를 표시하라\n",
@@ -195,6 +183,58 @@
     "\n",
     "dfs(graph, r, visited)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 1, 1, 1, 1], [1, 1, 1, 1, 1], [1, 1, 1, 1, 1], [1, 1, 1, 1, 1]]\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 아이스크림 문제\n",
+    "\n",
+    "\"\"\"\n",
+    "0 0 1 1 0\n",
+    "0 0 1 1 0\n",
+    "1 1 1 1 1\n",
+    "0 0 1 1 0\n",
+    "\"\"\"\n",
+    "\n",
+    "n, m = list(map(int, input().split()))\n",
+    "graph = []\n",
+    "for i in range(n):\n",
+    "    graph.append(list(map(int, input().split())))\n",
+    "\n",
+    "def rec(x, y):\n",
+    "    if x <= -1 or x >= n or y <= -1 or y >= m:\n",
+    "        return False\n",
+    "    if graph[x][y] == 0:\n",
+    "        graph[x][y] = 1\n",
+    "        rec(x, y - 1)\n",
+    "        rec(x, y + 1)\n",
+    "        rec(x - 1, y)\n",
+    "        rec(x + 1, y)\n",
+    "        return True\n",
+    "    return False\n",
+    "\n",
+    "\n",
+    "count = 0\n",
+    "for i in range(n):\n",
+    "    for j in range(m):\n",
+    "        if rec(i, j) == True:\n",
+    "            count += 1\n",
+    "\n",
+    "print(graph)\n",
+    "print(count)"
+   ]
   }
  ],
  "metadata": {
@@ -213,7 +253,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
