stash로 인한 충돌 부분 커밋

--- a/Algorithm/Python/practice/DFS-BFS/DFS.ipynb
+++ b/Algorithm/Python/practice/DFS-BFS/DFS.ipynb
@@ -195,6 +195,56 @@
     "\n",
     "dfs(graph, r, visited)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "0\n",
+      "1\n",
+      "1\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "음료수 얼려먹기\n",
+    "\n",
+    "- N x M 크기의 얼음 틀이 있다. 구멍이 뚤려 있는 부분은 0, 칸막이가 존재하는 부분은 1로 표시됨\n",
+    "- 구멍이 뚫려 있는 부분끼리 상, 하, 좌, 우로 붙어 있는 경우 서로 연결되어 있는 것으로 간주함\n",
+    "- 이때 얼음 틀의 모양이 주어졌을때 생성되는 총 아이스크림의 개수를 구하는 프로그램을 작성\n",
+    "- (4 x 5 얼음 틀 예시에서는 아이스크림이 총 3개 생성됨)\n",
+    "\n",
+    "0 0 1 1 0\n",
+    "0 0 0 1 1\n",
+    "1 1 1 1 1\n",
+    "0 0 0 0 0\n",
+    "\n",
+    "정답: 3개\n",
+    "\"\"\"\n",
+    "\n",
+    "# graph 생성 \n",
+    "n, m = list(map(int, input().split()))\n",
+    "graph = []\n",
+    "for i in range(n):\n",
+    "  graph.append(list(map(int, input().split())))\n",
+    "\n",
+    "# 0,0 부터 시작하여 0으로 표시된 모든 숫자를 1로 변경하고, 다시 1,0으로 돌아온다\n",
+    "\n",
+    "# dfs가 아니라 단순 재귀로 푼거 같은데\n",
+    "# 여기서 알아야할것은 위, 아래, 왼쪽, 오른쪽\n",
+    "def dfs(x, y): \n",
+    "    \n",
+    "      \n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
