--- a/Algorithm/Python/practice/DFS-BFS/BFS.ipynb
+++ b/Algorithm/Python/practice/DFS-BFS/BFS.ipynb
@@ -97,6 +97,79 @@
     "]\n",
     "\"\"\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "[[3, 0, 5, 0, 7, 0], [2, 3, 4, 5, 6, 7], [0, 0, 0, 0, 0, 8], [14, 13, 12, 11, 10, 9], [15, 14, 13, 12, 11, 10]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import deque\n",
+    "\n",
+    "# 최단경로 찾기\n",
+    "\n",
+    "# n, m = list(map(int, input().split()))\n",
+    "n, m = [5, 6]\n",
+    "graph = [\n",
+    "  [1, 0, 1, 0, 1, 0],\n",
+    "  [1, 1, 1, 1, 1, 1],\n",
+    "  [0, 0, 0, 0, 0, 1],\n",
+    "  [1, 1, 1, 1, 1, 1],\n",
+    "  [1, 1, 1, 1, 1, 1]\n",
+    "]\n",
+    "\n",
+    "# graph = []\n",
+    "# for i in range(n):\n",
+    "#   graph.append(list(map(int, input().split())))\n",
+    "\n",
+    "# 4방향으로 돌면서 숫자를 1씩 올려주면 (n, m)은 마지막의 최단경로가 된다.\n",
+    "dx = [-1, 1, 0, 0]\n",
+    "dy = [0, 0, 1, -1]\n",
+    "\n",
+    "# 파라미터로 x, y를 받아 queue를 쌓아 숫자를 변경한다.\n",
+    "def bfs(x, y):\n",
+    "  # 초기값을 세팅한다.\n",
+    "  queue = deque()\n",
+    "  queue.append((x, y))\n",
+    "  \n",
+    "  while queue:\n",
+    "    x, y = queue.popleft()\n",
+    "    for i in range(4):\n",
+    "      newX = x + dx[i]\n",
+    "      newY = y + dy[i]\n",
+    "      # print(newX, newY)\n",
+    "      # 2차원배열을 벗어난 인덱스는 배제한다. (n - 1), (m - 1) 까지가 해당 인덱스 범위이다.\n",
+    "      if newX <= -1 or newX >= n or newY <= -1 or newY >= m:\n",
+    "        continue\n",
+    "      # 0일떄는 최단경로에서 배제한다.\n",
+    "      if graph[newX][newY] == 0:\n",
+    "        continue\n",
+    "      if graph[newX][newY] == 1:\n",
+    "        # 현재의 자리의 값을 기존자리의 값에 1을 더한 값을 넣어준다.\n",
+    "        graph[newX][newY] = graph[x][y] + 1\n",
+    "        # queue에 값을 하나더 넣어준다.\n",
+    "        queue.append((newX, newY))\n",
+    "\n",
+    "  return graph[n - 1][m - 1]\n",
+    "\n",
+    "\n",
+    "\n",
+    "print(bfs(0, 0))\n",
+    "print(graph)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
