Python/greedy와 BFS 연습

--- a/Algorithm/Python/lecture/youtube/1.greedy/1.greedy.ipynb
+++ b/Algorithm/Python/lecture/youtube/1.greedy/1.greedy.ipynb
@@ -89,6 +89,130 @@
     "\n",
     "# toto(4)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "거스름돈\n",
+    "\n",
+    "- 거스름돈은 500원, 100원. 50원, 10원으로 동전은 무한히 존재함\n",
+    "- 거슬러 줘야할 동전의 최소 개수를 구하라. 단, 거슬러 줘야할 돈 N은 항상 10의 배수이다.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "- 소스의 시간복잡도는 O(k) => 코인의 개수만큼 나눠주면 되기때문에 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = int(input())\n",
+    "\n",
+    "coins = [500, 100, 50, 10]\n",
+    "\n",
+    "count = 0\n",
+    "for i in coins:\n",
+    "  thisCount = n // i\n",
+    "  count += thisCount\n",
+    "  n = n - (i * thisCount)\n",
+    "\n",
+    "print(count)\n",
+    "print(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = 1250\n",
+    "count = 0\n",
+    "\n",
+    "coins = [500, 100, 50, 10]\n",
+    "\n",
+    "for coin in coins:\n",
+    "  count += n // coin\n",
+    "  n %= coin\n",
+    "\n",
+    "print(n)\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "어떠한수가 1이 될떄까지 \n",
+    "\n",
+    "N이 1이 될떄까지 다음 두과정을 반복한다.\n",
+    "\n",
+    "- N에서 1을 뺍니다.\n",
+    "- N을 K로 나눕니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = 21\n",
+    "k = 4\n",
+    "\n",
+    "count = 0\n",
+    "\n",
+    "while n != 1:\n",
+    "  if n % k != 0:\n",
+    "    n -= 1\n",
+    "    count += 1\n",
+    "  else:\n",
+    "    n = n // k\n",
+    "    count += 1\n",
+    "\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "48\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 풀이\n",
+    "\n",
+    "n = 50\n",
+    "k = 3\n",
+    "\n",
+    "result = 0\n",
+    "\n",
+    "while True:\n",
+    "  target = (n // k) * k     # k로 나눌수 있는 값으로 찾는다. target == 48\n",
+    "\n",
+    "  # k로 나눌수 있는 값을 n에 뺀 값을 result에 넣는다?  result = 2 , \n",
+    "  # result가 1을 빼야하는 횟수가 된다는 말이구나\n",
+    "  result += (n - target);   \n",
+    "  n = target        # n == 48\n",
+    "  if n < k:\n",
+    "    break\n",
+    "  result += 1       # result == 3\n",
+    "  n //= k           # n == 16   n을 k로 나누어 n을 다시 초기화 시키면\n",
+    "\n",
+    "print(target)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
