Python/greedy 연습

--- a/Algorithm/Python/lecture/youtube/1.greedy/1.greedy.ipynb
+++ b/Algorithm/Python/lecture/youtube/1.greedy/1.greedy.ipynb
@@ -89,6 +89,113 @@
     "\n",
     "# toto(4)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "1이 될때까지\n",
+    "\"\"\"\n",
+    "\n",
+    "n = 11\n",
+    "k = 3\n",
+    "\n",
+    "result = 0\n",
+    "\n",
+    "while True:\n",
+    "    target = (n // k) * k       # 48 = (50 // 3) * 3    -> 몫에 나눈값을 다시 곱해 다음 타겟넘버를 생성\n",
+    "    result += (n - target)      # 2 = (50 - 48)         -> 1을 몇번 더해야 하는지 \n",
+    "    n = target                  # 50 = 48               -> 다음 타겟넘버\n",
+    "\n",
+    "    print(\"target : \", target)\n",
+    "    print(\"+1 result : \", result)\n",
+    "\n",
+    "    if n < k:\n",
+    "        break\n",
+    "\n",
+    "    # 나누는 연산 행위에 대한 값도 result에 포함되어야 하기 때문에 나눌때마다 1을 더해준다.\n",
+    "    result += 1                 \n",
+    "    print(n // k)\n",
+    "    n //= k     # 나눈 몫을 n에 다시 넣어줌 \n",
+    "    \n",
+    "\n",
+    "    print(\"// result : \", result)\n",
+    "\n",
+    "# 마지막 n을 k로 나눌때는 무조건 자기 자신을 나누게 되는 꼴이 된다.\n",
+    "# 그러므로 n은 1이 되고 (n // k) * k 시 target은 0이 된다.\n",
+    "# 때문에 마지막 n은 0이 되고 \n",
+    "result += (n - 1)\n",
+    "print()\n",
+    "print(\"n : \", n)\n",
+    "print(\"result: \", result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "곱하기 혹은 더하기\n",
+    "\n",
+    "각 자리 숫자(0 ~ 9)로만 이루어진 문자열 S가 주어졌을때 \n",
+    "왼쩍부터 오른쪽으로 하나씩 모든 숫자를 학인하며 숫자 사이에 x 혹은 + 연산자를 넣어\n",
+    "결과적으로 만들어진 가장 큰 수를 구하는 프로그램을 작성한다.\n",
+    "\n",
+    "모든 연산은 왼쪽에서 부터 순서대로 이루어진다.\n",
+    "\n",
+    "ex) 02984 -> ((((0 + 2) X 9) X 8)X 4) = 576\n",
+    "\n",
+    "또한 만들어질수 있는 가장 큰 수는 항상 20억 이하의 정수가 되도록 입력이 주어진다.\n",
+    "\"\"\"\n",
+    "\n",
+    "# n = input()\n",
+    "n = \"0010102984\"\n",
+    "\n",
+    "sum = 0\n",
+    "\n",
+    "# 0일때 곱하기가 되는것을 최대한 방지해야 한다.\n",
+    "# sum이 0일때, i가 0일때\n",
+    "\n",
+    "for num in n:\n",
+    "    i = int(num)\n",
+    "    if i == 0 or i == 1:\n",
+    "        sum += i\n",
+    "    else:\n",
+    "        if sum == 0:\n",
+    "            sum += i\n",
+    "        else:\n",
+    "            sum *= i\n",
+    "\n",
+    "print(sum)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 풀이\n",
+    "\n",
+    "data = input()\n",
+    "\n",
+    "# 첫 번째 문자를 숫자로 변경하여 대입\n",
+    "result = in(data[0])\n",
+    "\n",
+    "for i in range(1, len(data)):\n",
+    "    # 두 수 중에서 하나라도 0 또는 1인 경우, 곱하기보다는 더하기 수행\n",
+    "    num = int(data[i])\n",
+    "    if num <= 1 or result <= 1:\n",
+    "        result += num\n",
+    "    else:\n",
+    "        result *= num\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
@@ -107,7 +214,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
