--- a/Algorithm/Python/practice/DFS-BFS/BFS.ipynb
+++ b/Algorithm/Python/practice/DFS-BFS/BFS.ipynb
@@ -2,15 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# bfs 기본\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -152,14 +143,57 @@
     "\n",
     "  return graph[n - 1][m - 1]\n",
     "\n",
-    "\n",
-    "\n",
     "print(bfs(0, 0))\n",
-    "print(graph)\n",
+    "print(graph)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 8 7 4 5 6 None\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 기본 BFS\n",
     "\n",
+    "from collections import deque\n",
     "\n",
+    "graph = [\n",
+    "  [],\n",
+    "  [2, 3, 8],\n",
+    "  [1, 7],\n",
+    "  [1, 4, 5],\n",
+    "  [3, 5],\n",
+    "  [3, 4],\n",
+    "  [7],\n",
+    "  [2, 6, 8],\n",
+    "  [1, 7]\n",
+    "]\n",
     "\n",
-    "\n"
+    "visited = [False] * 9\n",
+    "\n",
+    "def bfs(graph, start, visited):\n",
+    "  visited[start] = True\n",
+    "  queue = deque()\n",
+    "  queue.append(start)\n",
+    "\n",
+    "  while queue:\n",
+    "    value = queue.popleft()\n",
+    "    print(value, end=\" \")\n",
+    "\n",
+    "    for i in graph[value]:\n",
+    "      if not visited[i]:\n",
+    "        queue.append(i)\n",
+    "        visited[i] = True\n",
+    "\n",
+    "print(bfs(graph, 1, visited))\n"
    ]
   }
  ],
