--- a/Algorithm/Python/practice/DFS-BFS/DFS.ipynb
+++ b/Algorithm/Python/practice/DFS-BFS/DFS.ipynb
@@ -238,21 +238,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "0\n",
-            "0\n",
-            "1\n",
-            "1\n",
-            "0\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "\"\"\"\n",
         "음료수 얼려먹기\n",
@@ -280,10 +268,59 @@
         "\n",
         "# dfs가 아니라 단순 재귀로 푼거 같은데\n",
         "# 여기서 알아야할것은 위, 아래, 왼쪽, 오른쪽\n",
-        "def dfs(x, y): \n",
+        "# def dfs(x, y): \n",
         "    \n",
         "      \n",
         "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1 2 7 6 8 3 4 5 None\n"
+          ]
+        }
+      ],
+      "source": [
+        "# 간선의 수를 체우라는 문제가 나오면 graph를 2차원 배열로 만들어 graph(x).append(y)의 형태로 진행하면 될까\n",
+        "# graph = [][]\n",
+        "\n",
+        "# n, m = list(map(int, input().split()))\n",
+        "\n",
+        "# graph = []\n",
+        "\n",
+        "# for i in range(n):\n",
+        "#   graph.append(list(map(int, input().split())))\n",
+        "\n",
+        "graph = [\n",
+        "  [],\n",
+        "  [2, 3, 8],\n",
+        "  [1, 7],\n",
+        "  [1, 4, 5],\n",
+        "  [3, 5],\n",
+        "  [3, 4],\n",
+        "  [7],\n",
+        "  [2, 6, 8],\n",
+        "  [1, 7]\n",
+        "]\n",
+        "\n",
+        "visited = [False] * 9\n",
+        "\n",
+        "def dfs(graph, idx, visited):\n",
+        "  visited[idx] = True\n",
+        "  print(idx, end=\" \")\n",
+        "\n",
+        "  for i in graph[idx]:\n",
+        "    if not visited[i]:\n",
+        "      dfs(graph, i, visited)\n",
+        "\n",
+        "print(dfs(graph, 1, visited))\n"
       ]
     }
   ],
@@ -303,7 +340,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.3"
+      "version": "3.9.2"
     },
     "orig_nbformat": 4
   },
