--- a/Algorithm/Python/practice/Binary_Search/binarySeach.ipynb
+++ b/Algorithm/Python/practice/Binary_Search/binarySeach.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def bs(array, target, start, end):\n",
     "    if start > end:\n",
@@ -35,8 +27,40 @@
     "if result == None:\n",
     "    print(\"result not found\")\n",
     "else :\n",
-    "    print(result)\n",
-    "\n"
+    "    print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def binary_search(graph, target, start, end) :\n",
+    "  if start > end:\n",
+    "    return None\n",
+    "  mid = (start + end) // 2\n",
+    "  if graph[mid] == target:\n",
+    "    return mid\n",
+    "  if graph[mid] > target:\n",
+    "    return binary_search(graph, target, start, mid - 1)\n",
+    "  if graph[mid] < target:\n",
+    "    return binary_search(graph, target, mid + 1, end)\n",
+    "  \n",
+    "\n",
+    "gg = [1, 3, 5, 7, 9, 11, 13, 15, 17, 19]\n",
+    "\n",
+    "print(binary_search(gg, 19, 0, len(gg) - 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# 1 3 5 7 9 11 13 15 17 19"
    ]
   }
  ],
@@ -56,7 +80,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.9.2"
   },
   "orig_nbformat": 4
  },
