Python/DFS, BFS

--- a/Algorithm/Python/practice/DFS-BFS/BFS.ipynb
+++ b/Algorithm/Python/practice/DFS-BFS/BFS.ipynb
@@ -91,9 +91,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "[[3, 0, 5, 0, 7, 0], [2, 3, 4, 5, 6, 7], [0, 0, 0, 0, 0, 8], [14, 13, 12, 11, 10, 9], [15, 14, 13, 12, 11, 10]]\n"
+     ]
+    }
+   ],
    "source": [
     "from collections import deque\n",
     "\n",
@@ -195,6 +204,147 @@
     "\n",
     "print(bfs(graph, 1, visited))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 8 7 4 5 6 None\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 기본 BFS 문제 풀이\n",
+    "\n",
+    "from collections import deque\n",
+    "\n",
+    "graph = [\n",
+    "  [],\n",
+    "  [2, 3, 8],\n",
+    "  [1, 7],\n",
+    "  [1, 4, 5],\n",
+    "  [3, 5],\n",
+    "  [3, 4],\n",
+    "  [7],\n",
+    "  [2, 6, 8],\n",
+    "  [1, 7]\n",
+    "]\n",
+    "visited = [False] * 9\n",
+    "\n",
+    "def bfs(graph, start, visited):\n",
+    "    visited[start] = True\n",
+    "    queue = deque([start])\n",
+    "\n",
+    "    while queue:\n",
+    "        value = queue.popleft()\n",
+    "        print(value, end=\" \")\n",
+    "\n",
+    "        for i in graph[value]:\n",
+    "            if not visited[i]:\n",
+    "                visited[i] = True\n",
+    "                queue.append(i)\n",
+    "\n",
+    "\n",
+    "print(bfs(graph, 1, visited))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "[[3, 0, 5, 0, 7, 0], [2, 3, 4, 5, 6, 7], [0, 0, 0, 0, 0, 8], [14, 13, 12, 11, 10, 9], [15, 14, 13, 12, 11, 10]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 최단경로찾기 문제\n",
+    "\n",
+    "\"\"\"\n",
+    "문풀 컨셉\n",
+    "- (0, 0)에서 시작하여 상하좌우 1을 찾을때마다 이전숫자를 기억하여 이전숫자 + 1을 해준값을 1과 교체한다.\n",
+    "- 최종 (n - 1, m - 1)의 값을 표시해주어 출력한다.\n",
+    "- 상하좌우를 가기위해 y축, x축의 임의의 좌표를 만들어서 사용한다.\n",
+    "\"\"\"\n",
+    "\n",
+    "from collections import deque\n",
+    "\n",
+    "graph = [\n",
+    "  [1, 0, 1, 0, 1, 0],\n",
+    "  [1, 1, 1, 1, 1, 1],\n",
+    "  [0, 0, 0, 0, 0, 1],\n",
+    "  [1, 1, 1, 1, 1, 1],\n",
+    "  [1, 1, 1, 1, 1, 1]\n",
+    "]\n",
+    "\n",
+    "dirY = [-1, 1, 0, 0]\n",
+    "dirX = [0, 0, -1, 1]\n",
+    "\n",
+    "n = 5\n",
+    "m = 6\n",
+    "\n",
+    "def bfs(x, y):\n",
+    "    queue = deque()\n",
+    "    queue.append((x, y))\n",
+    "\n",
+    "    while queue:\n",
+    "        x, y = queue.popleft()\n",
+    "        \n",
+    "        for i in range(4):\n",
+    "            newY = y + dirY[i]\n",
+    "            newX = x + dirX[i]\n",
+    "            if newX <= -1 or newY <= -1 or newX >= n or newY >= m:\n",
+    "                continue\n",
+    "            if graph[newX][newY] == 0:\n",
+    "                continue\n",
+    "            if graph[newX][newY] == 1:\n",
+    "                graph[newX][newY] = graph[x][y] + 1\n",
+    "                queue.append((newX, newY))\n",
+    "\n",
+    "    return graph[n - 1][m - 1]\n",
+    "\n",
+    "print(bfs(0, 0))\n",
+    "print(graph)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "graph = [\n",
+    "  [],\n",
+    "  [2, 3, 8],\n",
+    "  [1, 7],\n",
+    "  [1, 4, 5],\n",
+    "  [3, 5],\n",
+    "  [3, 4],\n",
+    "  [7],\n",
+    "  [2, 6, 8],\n",
+    "  [1, 7]\n",
+    "]\n",
+    "\n",
+    "graph = [\n",
+    "  [1, 0, 1, 0, 1, 0],\n",
+    "  [1, 1, 1, 1, 1, 1],\n",
+    "  [0, 0, 0, 0, 0, 1],\n",
+    "  [1, 1, 1, 1, 1, 1],\n",
+    "  [1, 1, 1, 1, 1, 1]\n",
+    "]\n",
+    "\"\"\""
+   ]
   }
  ],
  "metadata": {
@@ -213,7 +363,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
