--- a/Algorithm/Python/practice/DFS-BFS/DFS.ipynb
+++ b/Algorithm/Python/practice/DFS-BFS/DFS.ipynb
@@ -322,6 +322,99 @@
         "\n",
         "print(dfs(graph, 1, visited))\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "3\n"
+          ]
+        }
+      ],
+      "source": [
+        "# 얼음 열려먹기 문제\n",
+        "\n",
+        "# 입력받기\n",
+        "# 세로(n), 가로(m), 값 \n",
+        "\n",
+        "\"\"\"\n",
+        "4 5\n",
+        "\n",
+        "1 1 0 0 0\n",
+        "1 1 0 0 0\n",
+        "0 0 0 0 0\n",
+        "1 1 0 1 1\n",
+        "\n",
+        "\"\"\"\n",
+        "\n",
+        "def dfs(graph, y, x):\n",
+        "    if y <= -1 or x <= -1 or y >= n or x >= m:\n",
+        "        return False\n",
+        "    if graph[y][x] == 1:\n",
+        "        graph[y][x] = 0\n",
+        "        dfs(graph, y - 1, x)\n",
+        "        dfs(graph, y + 1, x)\n",
+        "        dfs(graph, y, x + 1)\n",
+        "        dfs(graph, y, x - 1)\n",
+        "        return True\n",
+        "    return False\n",
+        "\n",
+        "# n, m = list(map(int, input().split()))\n",
+        "\n",
+        "# graph = []\n",
+        "\n",
+        "# for i in range(n):\n",
+        "#     graph.append(list(map(int, input().split())))\n",
+        "\n",
+        "\n",
+        "graph = [\n",
+        "    [1, 1, 0, 0, 0],\n",
+        "    [1, 1, 0, 0, 0],\n",
+        "    [0, 0, 0, 1, 0],\n",
+        "    [1, 1, 0, 0, 0],\n",
+        "]\n",
+        "\n",
+        "count = 0\n",
+        "for i in range(n):\n",
+        "    for j in range(m):\n",
+        "        if dfs(graph, i, j):\n",
+        "            count += 1\n",
+        "\n",
+        "print(count)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "\"\"\"\n",
+        "graph = [\n",
+        "  [],\n",
+        "  [2, 3, 8],\n",
+        "  [1, 7],\n",
+        "  [1, 4, 5],\n",
+        "  [3, 5],\n",
+        "  [3, 4],\n",
+        "  [7],\n",
+        "  [2, 6, 8],\n",
+        "  [1, 7]\n",
+        "]\n",
+        "\n",
+        "graph = [\n",
+        "    [1, 1, 0, 1, 1],\n",
+        "    [1, 1, 0, 0, 0],\n",
+        "    [0, 0, 0, 1, 1],\n",
+        "    [1, 1, 0, 0, 1],\n",
+        "]\n",
+        "\"\"\""
+      ]
     }
   ],
   "metadata": {
@@ -340,7 +433,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.2"
+      "version": "3.11.3"
     },
     "orig_nbformat": 4
   },
