--- a/Algorithm/Python/lecture/youtube/1.greedy/1.greedy.ipynb
+++ b/Algorithm/Python/lecture/youtube/1.greedy/1.greedy.ipynb
@@ -320,6 +320,57 @@
     "        result *= num\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "방향전환 문제\n",
+    "\n",
+    "- 2차원 배열에서 'R - R - R - U - D - D' 방향으로 이동하여 최종 인덱스를 반환한다.\n",
+    "- 시작점은 (1, 1) 이다.\n",
+    "\n",
+    "입력\n",
+    "1. 공간의 크기              (1 <= N <= 100)\n",
+    "2. 여행가가 이동할 계획서    (1 <= 이동횟수 <= 100)\n",
+    "\n",
+    "5\n",
+    "R R R U D D\n",
+    "\"\"\"\n",
+    "\n",
+    "travel = list(map(int, input().split()))\n",
+    "\n",
+    "graph = [\n",
+    "  [0, 0, 0, 0, 0, 0],\n",
+    "  [0, 0, 0, 0, 0, 0],\n",
+    "  [0, 0, 0, 0, 0, 0],\n",
+    "  [0, 0, 0, 0, 0, 0],\n",
+    "  [0, 0, 0, 0, 0, 0],\n",
+    "  [0, 0, 0, 0, 0, 0],\n",
+    "]\n",
+    "#     남 북 서 동\n",
+    "dy = [-1, 1, 0, 0]\n",
+    "dx = [0, 0, -1, 1]\n",
+    "\n",
+    "def move(x, y):\n",
+    "  for key in travel:\n",
+    "    if key == \"R\":\n",
+    "      x += 1\n",
+    "    if key == \"L\":\n",
+    "      x -= 1\n",
+    "    if key == \"U\":\n",
+    "      y += 1\n",
+    "    if key == \"D\":\n",
+    "      y -= 1\n",
+    "\n",
+    "  return graph[x + 1][y + 1]\n",
+    "\n",
+    "\n",
+    "      "
+   ]
   }
  ],
  "metadata": {
@@ -338,7 +389,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.9.2"
   },
   "orig_nbformat": 4
  },
