Algorithm/Python/greedy 문제 추가

--- a/Algorithm/Python/lecture/youtube/1.greedy/1.greedy.ipynb
+++ b/Algorithm/Python/lecture/youtube/1.greedy/1.greedy.ipynb
@@ -323,9 +323,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6 4\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "방향전환 문제\n",
@@ -341,7 +349,7 @@
     "R R R U D D\n",
     "\"\"\"\n",
     "\n",
-    "travel = list(map(int, input().split()))\n",
+    "travel = list(map(str, input().split()))\n",
     "\n",
     "graph = [\n",
     "  [0, 0, 0, 0, 0, 0],\n",
@@ -351,6 +359,9 @@
     "  [0, 0, 0, 0, 0, 0],\n",
     "  [0, 0, 0, 0, 0, 0],\n",
     "]\n",
+    "\n",
+    "n = 6\n",
+    "\n",
     "#     남 북 서 동\n",
     "dy = [-1, 1, 0, 0]\n",
     "dx = [0, 0, -1, 1]\n",
@@ -358,18 +369,80 @@
     "def move(x, y):\n",
     "  for key in travel:\n",
     "    if key == \"R\":\n",
-    "      x += 1\n",
+    "      if n > x:\n",
+    "        x += 1\n",
     "    if key == \"L\":\n",
-    "      x -= 1\n",
-    "    if key == \"U\":\n",
-    "      y += 1\n",
+    "      if x > 0:\n",
+    "        x -= 1\n",
     "    if key == \"D\":\n",
-    "      y -= 1\n",
+    "      if n > y:\n",
+    "        y += 1\n",
+    "    if key == \"U\":\n",
+    "      if y > 0:\n",
+    "        y -= 1\n",
     "\n",
-    "  return graph[x + 1][y + 1]\n",
+    "  print(x + 1, y + 1)\n",
     "\n",
+    "move(0, 0)      "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "6\n",
+    "R R R U D D\n",
+    "\"\"\"\n",
     "\n",
-    "      "
+    "# 풀이\n",
+    "\n",
+    "# n 입력 받기\n",
+    "n = int(input())\n",
+    "x, y = 1, 1\n",
+    "plans = input().split()\n",
+    "\n",
+    "dx = [-1, 1, 0, 0]\n",
+    "dy = [0, 0, -1, 1]\n",
+    "move_types = ['L', 'R', 'U', 'D']\n",
+    "\n",
+    "# 이동 계획을 하나식 확인하기\n",
+    "for plan in plans:\n",
+    "    # 이동 후 좌표 구하기\n",
+    "    for i in range(len(move_types)):\n",
+    "        if plan == move_types[i]:\n",
+    "            nx = x + dx[i]\n",
+    "            ny = y + dy[i]\n",
+    "    # 초기화된 nx와 ny가 공간을 벗어나는 경우 x, y에 반영되지 못하게 된다.\n",
+    "    if nx < 1 or ny < 1 or nx > n or ny > n:\n",
+    "        continue\n",
+    "    # 초기화된 값을 x, y에 대입한다.\n",
+    "    x, y = nx, ny\n",
+    "\n",
+    "print(x, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "00시 00분 00초부터 N시 59분 59초까지의 모든 시각 중에서 \n",
+    "3이 하나라도 포함되는 모든 걍우의 수를 출력하라.\n",
+    "\"\"\"\n",
+    "\n"
    ]
   }
  ],
@@ -389,7 +462,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
