--- a/Algorithm/Python/lecture/youtube/1.greedy/1.greedy.ipynb
+++ b/Algorithm/Python/lecture/youtube/1.greedy/1.greedy.ipynb
@@ -441,8 +441,208 @@
     "\"\"\"\n",
     "00시 00분 00초부터 N시 59분 59초까지의 모든 시각 중에서 \n",
     "3이 하나라도 포함되는 모든 걍우의 수를 출력하라.\n",
+    "\n",
+    "입력조건 : 첫째 줄에 정수 N이 입력된다. (0 <= N <= 23)\n",
+    "출력조건 : 00시 00분 00초부터 N시 59분 59초까지의 모든 시각 중에서 3이 하나라도 포함되는 모든 경우의 수를 출력한다.\n",
+    "\n",
+    "입력 : 5   출력 예시 : 11475\n",
     "\"\"\"\n",
+    "\n",
+    "\"\"\"\n",
+    "1분에 몇개의 3이 나오나 \n",
+    "- \n",
+    "\"\"\"\n",
+    "\n",
+    "# 3 13 23 30 ~ 33 ~ 39 43 53\n",
+    "\n",
+    "# 1분에 16개\n",
+    "# 59분에 \n",
+    "\n",
+    "# n = int(input())\n",
+    "\n",
+    "# count = 0\n",
+    "# for i in range(60):\n",
+    "#   for k in str(i):\n",
+    "#     if(k == \"3\"):\n",
+    "#       count += 1\n",
+    "\n",
+    "\n",
+    "# # 1분 60초 - 3의 개수는 16게\n",
+    "# # 1시간 60분 - 3의 개수는 16개\n",
+    "\n",
+    "# answer = (n * 16) + (5 * 60 * 16)\n",
+    "\n",
+    "# print(answer)\n",
+    "\n",
+    "count = 0\n",
+    "for i in range(40):\n",
+    "  if '3' in str(i):\n",
+    "    print(i)\n",
+    "    count += 1\n",
+    "\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 풀이\n",
+    "\"\"\"\n",
+    "모든 시간을 전부 돌면서 \n",
+    "\"\"\"\n",
+    "h = int(input())\n",
+    "\n",
+    "count = 0\n",
+    "for i in range(h + 1):\n",
+    "  for j in range(60):\n",
+    "    for k in range(60):\n",
+    "      print(str(i) + str(j) + str(k), end=\" \")\n",
+    "      if '3' in str(i) + str(j) + str(k):\n",
+    "\n",
+    "        count += 1\n",
+    "\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 왕실 나이트\n",
+    "\"\"\"\n",
+    "행은 숫자, 열은 알파벳 8x8로 이루어진 평면상에서 나이트가 이동할 수 있는 경우의 수를 구하라\n",
+    "\n",
+    "입력 : a2, 출력 : 2\n",
+    "\"\"\"\n",
+    "\n",
+    "# 어떤 좌표가 주어졌을때 해당하는 좌표의 위치를 파악할수 있도록\n",
+    "\n",
+    "n = input()\n",
+    "\n",
+    "\n",
+    "\n",
+    "dirY = [2, 2, -2, -2, -1, 1, -1, 1]\n",
+    "dirX = [-1, 1, -1, 1, 2, 2, -2, -2]\n",
+    "alpabet = [\"a\", \"b\", \"c\", \"d\", \"e\", \"f\", \"g\", \"h\"]\n",
+    "\n",
+    "for i in n:\n",
+    "  print(i)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 풀이\n",
+    "\n",
+    "# 현재 나이트의 위치 입력받기\n",
+    "input_data = input()\n",
+    "row = int(input_data[1])\n",
+    "column = int(ord(input_data[0])) - int(ord('a')) + 1  # 아스키 코드를 입력하여 int로 위치를 구한다.\\\n",
+    "\n",
+    "# 나이트가 이동할 수 있는 8가지 방향 정의\n",
+    "steps = [(-2, -1), (-1, -2), (1, -2), (2, 1), (1, 2), (-1, 2), (-2, 1)]\n",
+    "\n",
+    "# 8가지 방향에 대하여 각 위치로 이동이 가능한지 확인\n",
+    "result = 0\n",
+    "for step in steps:\n",
+    "  # 이동하고자 하는 위치 확인\n",
+    "  next_row = row + step[0]\n",
+    "  next_column = column + step[1]\n",
+    "  # 해당 위치로 이동이 가능하다면 카운트 증가\n",
+    "  if next_row >= 1 and next_row <= 8 and next_column >= 1 and next_column <= 8:\n",
+    "    result += 1\n",
+    "\n",
+    "print(result)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ABCKK13\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "문자열 재정렬\n",
+    "\n",
+    "알파벳 대문자와 숫자(0 ~ 9)로만 구성된 문자열이 입력으로 주어진다. \n",
+    "이때 모든 알파벳을 오름차순으로 정렬하여 이어서 출력한 뒤에, 그 뒤에 모든 숫자를 더한 값을 이어서 출력한다.\n",
+    "\n",
+    "ex) K1KA5CB7  ->  ABCKK13\n",
+    "\"\"\"\n",
+    "\n",
+    "# 아스키코드 드럽게 많이 쓰이는구나\n",
+    "\n",
+    "input_data = input()\n",
+    "\n",
+    "a = []\n",
+    "b = 0\n",
+    "for i in input_data:\n",
+    "  if i.isalpha():\n",
+    "    a.append(ord(i))\n",
+    "  else:\n",
+    "    b += int(i)\n",
+    "\n",
+    "a.sort()\n",
+    "c = []\n",
+    "for i in a:\n",
+    "  c.append(chr(i))\n",
+    "\n",
+    "result = ''.join(c) + str(b)\n",
+    "\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 풀이\n",
+    "data = input()\n",
+    "result = []\n",
+    "value = 0\n",
+    "\n",
+    "for x in data:\n",
+    "  if x.isalpha():\n",
+    "    result.append(x)\n",
+    "  else:\n",
+    "    value += int(x)\n",
+    "\n",
+    "# 알파벳은 아스키 변환없이 그냥 sort가 가능하구나\n",
+    "result.sort()\n",
+    "\n",
+    "# 숫자가 0이 아닌지 확인\n",
+    "if value != 0:\n",
+    "  result.append(str(value))\n",
+    "\n",
+    "print(''.join(result))\n"
    ]
   }
  ],
@@ -462,7 +662,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.9.2"
   },
   "orig_nbformat": 4
  },
