--- a/Algorithm/Python/practice/DFS-BFS/DFS.ipynb
+++ b/Algorithm/Python/practice/DFS-BFS/DFS.ipynb
@@ -325,17 +325,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "3\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# 얼음 열려먹기 문제\n",
         "\n",
@@ -394,6 +386,22 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "t = input()                             # 테스트 케이스\n",
+        "n, m = list(map(int, input().split()))  # \n",
+        "\n",
+        "graph = []\n",
+        "\n",
+        "for i in range(n):\n",
+        "  graph.append(list(map(int, input().split())))\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "\"\"\"\n",
         "graph = [\n",
         "  [],\n",
@@ -433,7 +441,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.3"
+      "version": "3.9.2"
     },
     "orig_nbformat": 4
   },
