Algorithm/fc/핵심자료구조 문제풀이

--- a/Algorithm/Python/lecture/fastcompus/3.유형별-문제풀이/1.기본자료구조-기초문제풀이.ipynb
+++ b/Algorithm/Python/lecture/fastcompus/3.유형별-문제풀이/1.기본자료구조-기초문제풀이.ipynb
@@ -9,14 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n"
+      "21\n"
      ]
     }
    ],
@@ -41,26 +41,16 @@
     "    # 더한값을 저장하고 있다가 계속 비교하여 바꿔주면 될거 같다.\n",
     "\n",
     "N, M = list(map(int, input().split()))\n",
-    "values = list(map(int, input().split()))\n",
-    "cards = []\n",
-    "for index, value in cards:\n",
-    "    if index < N:\n",
-    "        cards.append(value)\n",
+    "cards = list(map(int, input().split()))\n",
     "\n",
-    "cards.sort()\n",
-    "\n",
-    "a = 0\n",
-    "b = 0\n",
-    "c = 0\n",
-    "s = 0\n",
     "result = 0\n",
-    "\n",
-    "for i in cards:\n",
+    "length = len(cards)\n",
+    "for i in range(length):\n",
     "    a = cards[i]\n",
-    "    for j in cards:\n",
+    "    for j in range(length):\n",
     "        if j > i:\n",
     "            b = cards[j]\n",
-    "        for k in cards:\n",
+    "        for k in range(length):\n",
     "            if k > j:\n",
     "                c = cards[k]\n",
     "            s = a + b + c\n",
