--- a/Algorithm/Python/grammar/list.ipynb
+++ b/Algorithm/Python/grammar/list.ipynb
@@ -6,13 +6,13 @@
    "source": [
     "list (참고링크 ([파이썬 코딩도장](https://dojang.io/mod/page/view.php?id=2286)))\n",
     "\n",
-    "- append: 요소 하나 추가\n",
+    "- append: 요소 하나 맨 뒤에 추가\n",
     "  - list.append(value)  value는 list도 가능하다.\n",
     "- extend: 리스트를 연결하여 확장\n",
     "  - list.extend(list)\n",
     "- insert: 특정 인덱스에 요소 추가\n",
     "  - list.insert(idx, value)\n",
-    "- pop: 마지막 요소 또는 특정 인덱스의 요소를 삭제\n",
+    "- pop: 마지막 요소 또는 특정 인덱스의 요소를 삭제 및 해당 value를 return한다.\n",
     "  - list.pop() or list.pop(idx)\n",
     "  - `pop` 대신 `del`을 이용하여 삭제가능\n",
     "  - del a[1]\n",
@@ -67,11 +67,71 @@
     "- input()을 단독으로 사용한다면 들어온 value를 리스트로 변환한다.\n",
     "  - 10101 -> [1, 0, 1, 0, 1]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(10, 0), (20, 1), (30, 2), (40, 3)]\n",
+      "(40, 3)\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 리스트를 item, index 형태로 생성이 가능하다.\n",
+    "queue = [10, 20, 30, 40]\n",
+    "queue = [(item, idx) for idx, item in enumerate(queue)]\n",
+    "print(queue)  # [(10, 0), (20, 1), (30, 2), (40, 3)]\n",
+    "\n",
+    "# 튜플을 값으로 가지는 list에서 max value를 추출하는 방법은 다음과 같이 나타낸다.\n",
+    "value = max(queue, key= lambda x: x[0])\n",
+    "print(value)  # (40, 3)\n",
+    "print(queue[-1] == value)   # True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "102030\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 리스트의 문자열 합치기 (int 있으면 에러 뱉음)\n",
+    "# '구분자'.join([]) => 구분자를 이용해 newLine 별로 출력이 가능함 => '\\n'\n",
+    "print(''.join(['10', '20', '30']))"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
