python 기본기능 추가

--- a/Algorithm/Python/grammar/list.ipynb
+++ b/Algorithm/Python/grammar/list.ipynb
@@ -70,19 +70,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[(10, 0), (20, 1), (30, 2), (40, 3)]\n",
-      "(40, 3)\n",
-      "True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 리스트를 item, index 형태로 생성이 가능하다.\n",
     "queue = [10, 20, 30, 40]\n",
@@ -97,21 +87,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "102030\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 리스트의 문자열 합치기 (int 있으면 에러 뱉음)\n",
     "# '구분자'.join([]) => 구분자를 이용해 newLine 별로 출력이 가능함 => '\\n'\n",
     "print(''.join(['10', '20', '30']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# stack, queue 를 리스트로 구현하기"
    ]
   }
  ],
